# auth-service

./: pyproject.toml
libs/types_validators/: email.py
tests/libs/types_validators/: test_email.py
