[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["Julio Oliveira <antoniojuliodeo@gmail.com>"]
readme = "README.md"
packages = [{include = "auth_service"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
